--- a/SpaceAdventures/Infrastructure/Infrastructure.csproj
+++ b/SpaceAdventures/Infrastructure/Infrastructure.csproj
@@ -10,4 +10,12 @@
     <Folder Include="Persistence\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
