--- a/SpaceAdventures/SpaceAdventures.MVC/SpaceAdventures.MVC.csproj
+++ b/SpaceAdventures/SpaceAdventures.MVC/SpaceAdventures.MVC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SpaceAdventures.API\SpaceAdventures.API.csproj" />
   </ItemGroup>
 
 </Project>
