--- a/SpaceAdventures/Application/SpaceAdventures.Application.csproj
+++ b/SpaceAdventures/Application/SpaceAdventures.Application.csproj
@@ -10,10 +10,7 @@
     <Folder Include="Common\Behaviors\" />
     <Folder Include="Common\Commands\Flight\" />
     <Folder Include="Common\Exceptions\" />
-    <Folder Include="Common\Mappings\" />
     <Folder Include="Common\Models\" />
-    <Folder Include="Common\Interfaces\" />
-    <Folder Include="Common\Queries\" />
     <Folder Include="Common\Services\" />
   </ItemGroup>
 
@@ -26,10 +23,11 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Domain\SpaceAdventures.Domain.csproj" />
   </ItemGroup>
 
 </Project>
