--- a/SpaceAdventures/Infrastructure/SpaceAdventures.Infrastructure.csproj
+++ b/SpaceAdventures/Infrastructure/SpaceAdventures.Infrastructure.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Application\SpaceAdventures.Application.csproj" />
   </ItemGroup>
 
 </Project>
