--- a/SpaceAdventures/SpaceAdventures.API/SpaceAdventures.API.csproj
+++ b/SpaceAdventures/SpaceAdventures.API/SpaceAdventures.API.csproj
@@ -11,13 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="Filters\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Application\SpaceAdventures.Application.csproj" />
+    <ProjectReference Include="..\Infrastructure\SpaceAdventures.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
