--- a/SpaceAdventures/SpaceAdventures.API/appsettings.Development.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:madi.database.windows.net,1433;Initial Catalog=SpaceAdventures;Persist Security Info=False;User ID=madi;Password=King1**/;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
