--- a/SpaceAdventures/SpaceAdventures.API/appsettings.Development.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:madi.database.windows.net,1433;Initial Catalog=SpaceAdventures;Persist Security Info=False;User ID=madi;Password=King1**/;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=DESKTOP-CEI1HQQ\\SQL_EPHEC;Initial Catalog=SpaceAdventures;Integrated Security=True"
   },
 
   "Logging": {
