--- a/SpaceAdventures/SpaceAdventures.API/appsettings.Development.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-CEI1HQQ\\SQL_EPHEC;Initial Catalog=SpaceAdventures;Integrated Security=True"
+    "DefaultConnection": "Data Source=madi.database.windows.net;Initial Catalog=SpaceAdventures;User ID=madi;Password=King1**/"
   },
 
   "Logging": {
