--- a/SpaceAdventures/SpaceAdventures.MVC/SpaceAdventures.MVC.csproj
+++ b/SpaceAdventures/SpaceAdventures.MVC/SpaceAdventures.MVC.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpaceAdventures.API\SpaceAdventures.API.csproj" />
+    <ProjectReference Include="..\Application\SpaceAdventures.Application.csproj" />
   </ItemGroup>
 
 </Project>
