--- a/SpaceAdventures/Application/SpaceAdventures.Application.csproj
+++ b/SpaceAdventures/Application/SpaceAdventures.Application.csproj
@@ -9,7 +9,6 @@
   <ItemGroup>
     <Folder Include="Common\Commands\Flight\" />
     <Folder Include="Common\Commands\Global\" />
-    <Folder Include="Common\Exceptions\" />
     <Folder Include="Common\Queries\Global\" />
   </ItemGroup>
 
@@ -23,6 +22,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
