--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -5,5 +5,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Users\\hchad\\Source\\Repos\\Projet-Web\\logs.txt",
+          "outputTemplate": "{Timestamp} {Level} {Message}{NewLine:1}{Exception:1}"
+        }
+      }
+    ]
+  }
 }
