--- a/SpaceAdventures/SpaceAdventures.API/appsettings.Development.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.Development.json
@@ -1,12 +1,37 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=madi.database.windows.net;Initial Catalog=SpaceAdventures;User ID=madi;Password=King1**/"
-  },
-
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Properties": {
+      "Application": "SpaceAdventures API"
+    },
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Steeltoe": "Information",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs\\SpaceAdventuresLogs_.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}]: {Message}{NewLine}{Exception}",
+          "rollingInterval": "Day",
+          "fileSizeLimitBytes": 10485760,
+          "retainedFileCountLimit": 180,
+          "rollOnFileSizeLimit": true,
+          "shared": true
+        }
+      }
+    ]
   }
 }
