--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -1,14 +1,14 @@
 {
-  "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "https://dev-etahkomt.us.auth0.com/",
+    "Audience": "https://localhost:7195/"
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
