--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-etahkomt.us.auth0.com",
+    "ClientId": "xOvk5wJTmWjUEykA4cx4CECU0emJjnIx",
+    "ClientSecret": "-etaJyh_WwFHQWdWoFfR9ljcVGORcOcefiFKXCD3xN34QfBNpnWlMcYL_vwhOro-",
+    "Audience": "https://localhost:7230"
+
+  }
 }
