--- a/SpaceAdventures/SpaceAdventures.API/Properties/launchSettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43067",
-      "sslPort": 44364
+      "applicationUrl": "http://localhost:62054/",
+      "sslPort": 44355
     }
   },
   "profiles": {
     "SpaceAdventures.API": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7195;http://localhost:5195",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7195;http://localhost:5195",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
