Layout | User Interface & Implementation | FrontEnd

--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -13,5 +13,12 @@
   "Auth0": {
     "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195/"
+  },
+  "Auth0ManagementApi": {
+    "Audience": "https://dev-etahkomt.us.auth0.com/api/v2/",
+    "Path": "https://dev-etahkomt.us.auth0.com/oauth/token",
+    "ClientSecret": "HEh1skK_y4z-yUWPNl5mKVA6fykvivTIhJgxd5sIcWF8GvjndzRZ3Y3k5Hu44K45",
+    "ClientId": "pjdGkrGwRPDLkq36AbtiOgGLwImfbGc1",
+    "GrantType": "client_credentials"
   }
 }
