--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -10,7 +10,7 @@
     "Domain": "dev-etahkomt.us.auth0.com",
     "ClientId": "xOvk5wJTmWjUEykA4cx4CECU0emJjnIx",
     "ClientSecret": "-etaJyh_WwFHQWdWoFfR9ljcVGORcOcefiFKXCD3xN34QfBNpnWlMcYL_vwhOro-",
-    "Audience": "https://localhost:7230"
+    "Audience": "https://localhost:7195/"
 
   }
 }
