--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "dev-etahkomt.us.auth0.com",
-    "ClientId": "xOvk5wJTmWjUEykA4cx4CECU0emJjnIx",
-    "ClientSecret": "-etaJyh_WwFHQWdWoFfR9ljcVGORcOcefiFKXCD3xN34QfBNpnWlMcYL_vwhOro-",
-    "Audience": "https://localhost:7195/"
+    "Domain": "dev-hlpjlsil.eu.auth0.com", //"dev-etahkomt.us.auth0.com",
+    "ClientId": "0j9kk8shGlcBNHos5X4mlxcpSPGSK8Gq", //"xOvk5wJTmWjUEykA4cx4CECU0emJjnIx",
+    "ClientSecret": "6FnWhbzw-dveMLr-ZMBoq9uvyGBD6LZknuqgSuZnsrNkfPATNXr-2sDOcEKQpx2x", //"-etaJyh_WwFHQWdWoFfR9ljcVGORcOcefiFKXCD3xN34QfBNpnWlMcYL_vwhOro-",
+    "Audience": "https://localhost:7230" //"https://localhost:7195/"
 
   }
 }
