--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "https://dev-hlpjlsil.eu.auth0.com/", //"https://dev-etahkomt.us.auth0.com/",
+    "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
   "Auth0ManagementApi": {
@@ -30,6 +30,3 @@
     "URL": "http://images-api.nasa.gov/album/"
   }
 }
-
-
-
