MVC Services | dashboard AJax Call

--- a/SpaceAdventures/SpaceAdventures.MVC/SpaceAdventures.MVC.csproj
+++ b/SpaceAdventures/SpaceAdventures.MVC/SpaceAdventures.MVC.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Services\Interfaces\" />
     <Folder Include="wwwroot\backgrounds\" />
   </ItemGroup>
 
