--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -22,6 +22,6 @@
     "Domain": "",
     "ClientId": "",
     "ClientSecret": "",
-    "Audience": ""
+    "Audience": "https://localhost:7230"
   }
 }
