--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -10,17 +10,32 @@
     }
   },
   "AllowedHosts": "*",
-  "Auth0": {
+  "Auth0_Hammadi": {
     "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
-  "Auth0ManagementApi": {
+
+  "Auth0": {
+    "Domain": "https://dev-hlpjlsil.eu.auth0.com",
+    "Audience": "https://localhost:7195"
+  },
+
+  "Auth0ManagementApi_Hammadi": {
     "Audience": "https://dev-etahkomt.us.auth0.com/api/v2/",
     "Path": "https://dev-etahkomt.us.auth0.com/oauth/token",
     "ClientSecret": "HEh1skK_y4z-yUWPNl5mKVA6fykvivTIhJgxd5sIcWF8GvjndzRZ3Y3k5Hu44K45",
     "ClientId": "pjdGkrGwRPDLkq36AbtiOgGLwImfbGc1",
     "GrantType": "client_credentials"
   },
+
+  "Auth0ManagementApi": {
+    "Audience": "https://dev-hlpjlsil.eu.auth0.com/api/v2/",
+    "Path": "https://dev-hlpjlsil.eu.auth0.com/oauth/token",
+    "ClientSecret": "WlD2tw3_5TQIwiYor0unXvfl_Sc49nHibO7J4VjQlY2grFp-7-njNu-ZeJIdB8XV",
+    "ClientId": "KWDDIOPsZ0drvGi9CdufZmoPDCqMGMgY",
+    "GrantType": "client_credentials"
+  },
+
 
   "ISSCL": {
     "URL": "http://api.open-notify.org/iss-now.json"
