Ajax Call inside view (SolarSytem View)
Showing some infos about planets by consuming an external api

--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -10,17 +10,22 @@
     }
   },
   "AllowedHosts": "*",
-  "Auth0_Hammadi": {
+  "Auth0": {
     "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0": {
+  "Auth0_Antoine": {
     "Domain": "https://dev-hlpjlsil.eu.auth0.com",
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0ManagementApi_Hammadi": {
+  "Auth0_Corentin": {
+    "Domain": "",
+    "Audience": ""
+  },
+
+  "Auth0ManagementApi": {
     "Audience": "https://dev-etahkomt.us.auth0.com/api/v2/",
     "Path": "https://dev-etahkomt.us.auth0.com/oauth/token",
     "ClientSecret": "HEh1skK_y4z-yUWPNl5mKVA6fykvivTIhJgxd5sIcWF8GvjndzRZ3Y3k5Hu44K45",
@@ -28,12 +33,20 @@
     "GrantType": "client_credentials"
   },
 
-  "Auth0ManagementApi": {
+  "Auth0ManagementApi_Antoine": {
     "Audience": "https://dev-hlpjlsil.eu.auth0.com/api/v2/",
     "Path": "https://dev-hlpjlsil.eu.auth0.com/oauth/token",
     "ClientSecret": "WlD2tw3_5TQIwiYor0unXvfl_Sc49nHibO7J4VjQlY2grFp-7-njNu-ZeJIdB8XV",
     "ClientId": "KWDDIOPsZ0drvGi9CdufZmoPDCqMGMgY",
     "GrantType": "client_credentials"
+  },
+
+  "Auth0ManagementApi_Corentin": {
+    "Audience": "",
+    "Path": "",
+    "ClientSecret": "",
+    "ClientId": "",
+    "GrantType": ""
   },
 
 
