--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -6,13 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-  "Auth0": {
+  "Auth0_Antoine": {
     "Domain": "dev-hlpjlsil.eu.auth0.com",
     "ClientId": "0j9kk8shGlcBNHos5X4mlxcpSPGSK8Gq",
     "ClientSecret": "6FnWhbzw-dveMLr-ZMBoq9uvyGBD6LZknuqgSuZnsrNkfPATNXr-2sDOcEKQpx2x",
     "Audience": "https://localhost:7195"
   },
-  "Auth0_Hammadi": {
+  "Auth0": {
     "Domain": "dev-etahkomt.us.auth0.com",
     "ClientId": "xOvk5wJTmWjUEykA4cx4CECU0emJjnIx",
     "ClientSecret": "-etaJyh_WwFHQWdWoFfR9ljcVGORcOcefiFKXCD3xN34QfBNpnWlMcYL_vwhOro-",
