--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Auth0": {
+  "Auth0_Antoine": {
     "Domain": "dev-hlpjlsil.eu.auth0.com",
     "ClientId": "0j9kk8shGlcBNHos5X4mlxcpSPGSK8Gq",
     "ClientSecret": "6FnWhbzw-dveMLr-ZMBoq9uvyGBD6LZknuqgSuZnsrNkfPATNXr-2sDOcEKQpx2x",
@@ -18,7 +18,7 @@
     "ClientSecret": "-etaJyh_WwFHQWdWoFfR9ljcVGORcOcefiFKXCD3xN34QfBNpnWlMcYL_vwhOro-",
     "Audience": "https://localhost:7195/"
   },
-  "Auth0_Corentin": {
+  "Auth0": {
     "Domain": "dev-c6lwemo7.us.auth0.com",
     "ClientId": "BDXruBnNgaUREYLmudCmmcxyD5jzlXQc",
     "ClientSecret": "04C8SwamsGLiajV4B7q3bmS5z_gVd_hvMhBQhi7tGRQHPwCmEMHwRAmRW2Q0rOO3",
