--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -12,13 +12,13 @@
     "ClientSecret": "6FnWhbzw-dveMLr-ZMBoq9uvyGBD6LZknuqgSuZnsrNkfPATNXr-2sDOcEKQpx2x",
     "Audience": "https://localhost:7195"
   },
-  "Auth0_Hammadi": {
+  "Auth0": {
     "Domain": "dev-etahkomt.us.auth0.com",
     "ClientId": "xOvk5wJTmWjUEykA4cx4CECU0emJjnIx",
     "ClientSecret": "-etaJyh_WwFHQWdWoFfR9ljcVGORcOcefiFKXCD3xN34QfBNpnWlMcYL_vwhOro-",
     "Audience": "https://localhost:7195/"
   },
-  "Auth0": {
+  "Auth0_Corentin": {
     "Domain": "dev-c6lwemo7.us.auth0.com",
     "ClientId": "BDXruBnNgaUREYLmudCmmcxyD5jzlXQc",
     "ClientSecret": "04C8SwamsGLiajV4B7q3bmS5z_gVd_hvMhBQhi7tGRQHPwCmEMHwRAmRW2Q0rOO3",
