Ajout ListUser Ok

--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Auth0": {
+  "Auth0_Hammadi": {
     "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
@@ -20,7 +20,7 @@
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0_Corentin": {
+  "Auth0": {
     "Domain": "https://dev-c6lwemo7.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
@@ -34,18 +34,18 @@
     "GrantType": "client_credentials"
   },
 
-  "Auth0ManagementApi": {
+  "Auth0ManagementApi_Antoine": {
     "Audience": "https://dev-hlpjlsil.eu.auth0.com/api/v2/",
     "Path": "https://dev-hlpjlsil.eu.auth0.com/oauth/token",
     "ClientSecret": "4My5JXSY6_yKi7IH13vKvF1BclVSBe45F8s7JZQImUDGipVQUcVQZd4cuAuhwt5r",
     "ClientId": "h0Uwb6zvU8NSEsmhjYM5YkCVIJK6wXhb",
     "GrantType": "client_credentials"
   },
-  "Auth0ManagementApi_Corentin": {
+  "Auth0ManagementApi": {
     "Audience": "https://dev-c6lwemo7.us.auth0.com/api/v2/",
     "Path": "https://dev-c6lwemo7.us.auth0.com/oauth/token",
-    "ClientSecret": "04C8SwamsGLiajV4B7q3bmS5z_gVd_hvMhBQhi7tGRQHPwCmEMHwRAmRW2Q0rOO3",
-    "ClientId": "BDXruBnNgaUREYLmudCmmcxyD5jzlXQc",
+    "ClientSecret": "aJjviBa_sZay7jd-jy-6rsNVW4-tSLO3Rp8ypWpn6jnaKl3_v7m7OIqPEVwRLvAW",
+    "ClientId": "NR6HiCQDqCd2kgbjpaW0kRV4U9Hg7ExC",
     "GrantType": "client_credentials"
   },
 
