API Issue Fixed | Assign Roles Fixed

--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -10,12 +10,12 @@
     }
   },
   "AllowedHosts": "*",
-  "Auth0_Hammadi": {
+  "Auth0": {
     "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0": {
+  "Auth0_Antoine": {
     "Domain": "https://dev-hlpjlsil.eu.auth0.com/",
     "Audience": "https://localhost:7195"
   },
@@ -25,7 +25,7 @@
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0ManagementApi_Hammadi": {
+  "Auth0ManagementApi": {
     "Audience": "https://dev-etahkomt.us.auth0.com/api/v2/",
     "Path": "https://dev-etahkomt.us.auth0.com/oauth/token",
     "ClientSecret": "HEh1skK_y4z-yUWPNl5mKVA6fykvivTIhJgxd5sIcWF8GvjndzRZ3Y3k5Hu44K45",
@@ -33,7 +33,7 @@
     "GrantType": "client_credentials"
   },
 
-  "Auth0ManagementApi": {
+  "Auth0ManagementApi_Antoine": {
     "Audience": "https://dev-hlpjlsil.eu.auth0.com/api/v2/",
     "Path": "https://dev-hlpjlsil.eu.auth0.com/oauth/token",
     "ClientSecret": "4My5JXSY6_yKi7IH13vKvF1BclVSBe45F8s7JZQImUDGipVQUcVQZd4cuAuhwt5r",
