--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,5 @@ SpaceAdventures/SpaceAdventures.API/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
 SpaceAdventures/SpaceAdventures.API/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+SpaceAdventures/SpaceAdventures.API/appsettings.json
+SpaceAdventures/SpaceAdventures.MVC/appsettings.json
