--- a/SpaceAdventures/Application/SpaceAdventures.Application.csproj
+++ b/SpaceAdventures/Application/SpaceAdventures.Application.csproj
@@ -8,13 +8,14 @@
 
   <ItemGroup>
     <Compile Remove="Common\Commands\Flight\**" />
+    <Compile Remove="Common\Commands\Global\**" />
+    <Compile Remove="Common\Queries\Global\**" />
     <EmbeddedResource Remove="Common\Commands\Flight\**" />
+    <EmbeddedResource Remove="Common\Commands\Global\**" />
+    <EmbeddedResource Remove="Common\Queries\Global\**" />
     <None Remove="Common\Commands\Flight\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Common\Commands\Global\" />
-    <Folder Include="Common\Queries\Global\" />
+    <None Remove="Common\Commands\Global\**" />
+    <None Remove="Common\Queries\Global\**" />
   </ItemGroup>
 
   <ItemGroup>
