--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -10,12 +10,17 @@
     }
   },
   "AllowedHosts": "*",
+
+
+  /****************** Space Adventures API ******************/
+
+
   "Auth0": {
     "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0": {
+  "Auth0_Antoine": {
     "Domain": "https://dev-hlpjlsil.eu.auth0.com/",
     "Audience": "https://localhost:7195"
   },
@@ -25,6 +30,10 @@
     "Audience": "https://localhost:7195"
   },
 
+
+
+  /****************  Auth0 API Management  *******************/
+
   "Auth0ManagementApi": {
     "Audience": "https://dev-etahkomt.us.auth0.com/api/v2/",
     "Path": "https://dev-etahkomt.us.auth0.com/oauth/token",
@@ -33,7 +42,7 @@
     "GrantType": "client_credentials"
   },
 
-  "Auth0ManagementApi": {
+  "Auth0ManagementApi_Antoine": {
     "Audience": "https://dev-hlpjlsil.eu.auth0.com/api/v2/",
     "Path": "https://dev-hlpjlsil.eu.auth0.com/oauth/token",
     "ClientSecret": "4My5JXSY6_yKi7IH13vKvF1BclVSBe45F8s7JZQImUDGipVQUcVQZd4cuAuhwt5r",
@@ -47,6 +56,10 @@
     "ClientId": "NR6HiCQDqCd2kgbjpaW0kRV4U9Hg7ExC",
     "GrantType": "client_credentials"
   },
+
+
+
+  /************* NASA API ***************/
 
   "ISSCL": {
     "URL": "http://api.open-notify.org/iss-now.json"
