--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -15,12 +15,12 @@
   /****************** Space Adventures API ******************/
 
 
-  "Auth0": {
+  "Auth0_Hammadi": {
     "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0_Antoine": {
+  "Auth0": {
     "Domain": "https://dev-hlpjlsil.eu.auth0.com/",
     "Audience": "https://localhost:7195"
   },
@@ -34,7 +34,7 @@
 
   /****************  Auth0 API Management  *******************/
 
-  "Auth0ManagementApi": {
+  "Auth0ManagementApi_Hammadi": {
     "Audience": "https://dev-etahkomt.us.auth0.com/api/v2/",
     "Path": "https://dev-etahkomt.us.auth0.com/oauth/token",
     "ClientSecret": "HEh1skK_y4z-yUWPNl5mKVA6fykvivTIhJgxd5sIcWF8GvjndzRZ3Y3k5Hu44K45",
@@ -42,7 +42,7 @@
     "GrantType": "client_credentials"
   },
 
-  "Auth0ManagementApi_Antoine": {
+  "Auth0ManagementApi": {
     "Audience": "https://dev-hlpjlsil.eu.auth0.com/api/v2/",
     "Path": "https://dev-hlpjlsil.eu.auth0.com/oauth/token",
     "ClientSecret": "4My5JXSY6_yKi7IH13vKvF1BclVSBe45F8s7JZQImUDGipVQUcVQZd4cuAuhwt5r",
