IdRole Null => Fixed

--- a/.gitignore
+++ b/.gitignore
@@ -359,3 +359,5 @@ SpaceAdventures/SpaceAdventures.API/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
 SpaceAdventures/SpaceAdventures.API/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+SpaceAdventures/SpaceAdventures.API/appsettings.json
+SpaceAdventures/SpaceAdventures.MVC/appsettings.json
