--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -10,7 +10,7 @@
 
   /******   Auth0 Space Adventures APIs  *******/
 
-  "Auth0_Hammadi": {
+  "Auth0": {
     "Domain": "dev-etahkomt.us.auth0.com",
     "ClientId": "xOvk5wJTmWjUEykA4cx4CECU0emJjnIx",
     "ClientSecret": "-etaJyh_WwFHQWdWoFfR9ljcVGORcOcefiFKXCD3xN34QfBNpnWlMcYL_vwhOro-",
@@ -24,7 +24,7 @@
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0": {
+  "Auth0_Corentin": {
     "Domain": "dev-c6lwemo7.us.auth0.com",
     "ClientId": "BDXruBnNgaUREYLmudCmmcxyD5jzlXQc",
     "ClientSecret": "04C8SwamsGLiajV4B7q3bmS5z_gVd_hvMhBQhi7tGRQHPwCmEMHwRAmRW2Q0rOO3",
@@ -33,7 +33,7 @@
 
     /******* Auth0 API Management *********/
 
-    "Auth0ManagementApi_Hammadi": {
+    "Auth0ManagementApi": {
       "Audience": "https://dev-etahkomt.us.auth0.com/api/v2/",
       "Path": "https://dev-etahkomt.us.auth0.com/oauth/token",
       "ClientSecret": "HEh1skK_y4z-yUWPNl5mKVA6fykvivTIhJgxd5sIcWF8GvjndzRZ3Y3k5Hu44K45",
@@ -49,7 +49,7 @@
       "GrantType": "client_credentials"
     },
 
-    "Auth0ManagementApi": {
+    "Auth0ManagementApi_Corentin": {
       "Audience": "https://dev-c6lwemo7.us.auth0.com/api/v2/",
       "Path": "https://dev-c6lwemo7.us.auth0.com/oauth/token",
       "ClientSecret": "aJjviBa_sZay7jd-jy-6rsNVW4-tSLO3Rp8ypWpn6jnaKl3_v7m7OIqPEVwRLvAW",
