Dedicated Nuget Consumed

--- a/SpaceAdventures/SpaceAdventures.API/SpaceAdventures.API.csproj
+++ b/SpaceAdventures/SpaceAdventures.API/SpaceAdventures.API.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="LogRequestNuget" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
@@ -25,6 +26,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\SpaceAdventures.Application.csproj" />
     <ProjectReference Include="..\Infrastructure\SpaceAdventures.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Middlewares\" />
   </ItemGroup>
 
 </Project>
