--- a/LogRequestNuget/LogRequestNuget.csproj
+++ b/LogRequestNuget/LogRequestNuget.csproj
@@ -4,18 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>Hallet, Deconninck, Chadli</Authors>
-    <Description>This will log the requests in the output console</Description>
-    <PackageIcon>MicrosoftTeams-image.png</PackageIcon>
+    <Description>This will log all your requests in the output console</Description>
+    <PackageIcon></PackageIcon>
+    <PackageTags>logger, logs, logging</PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="..\..\..\..\Downloads\MicrosoftTeams-image.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
