--- a/LogRequestNuget/LogRequestNuget.csproj
+++ b/LogRequestNuget/LogRequestNuget.csproj
@@ -4,18 +4,24 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>1.2.0</Version>
-    <Authors>Hallet A, Deconninck C, Chadli H</Authors>
+    <Version>1.2.1</Version>
+    <Authors>Hallet, Deconninck  &amp; Chadli</Authors>
     <Description>This will log all your requests in the output console
-Eg :
 Request Content TYpe : application/json,*/* 
 Request Path : /swagger/v1/swagger.json 
 Response Type : application/json;charset=utf-8 
 Response Lenght : 85102</Description>
-    <PackageIcon></PackageIcon>
-    <PackageTags>logger, logs, logging</PackageTags>
+	  <PackageTags>logger, logs, logging</PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageIcon>log-file.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\Downloads\log-file.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
