--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -15,7 +15,7 @@
   /****************** Space Adventures API ******************/
 
 
-  "Auth0": {
+  "Auth0_Hammadi": {
     "Domain": "https://dev-etahkomt.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
@@ -25,7 +25,7 @@
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0_Corentin": {
+  "Auth0": {
     "Domain": "https://dev-c6lwemo7.us.auth0.com/",
     "Audience": "https://localhost:7195"
   },
@@ -34,7 +34,7 @@
 
   /****************  Auth0 API Management  *******************/
 
-  "Auth0ManagementApi": {
+  "Auth0ManagementApi_Hammadi": {
     "Audience": "https://dev-etahkomt.us.auth0.com/api/v2/",
     "Path": "https://dev-etahkomt.us.auth0.com/oauth/token",
     "ClientSecret": "HEh1skK_y4z-yUWPNl5mKVA6fykvivTIhJgxd5sIcWF8GvjndzRZ3Y3k5Hu44K45",
@@ -49,7 +49,7 @@
     "ClientId": "h0Uwb6zvU8NSEsmhjYM5YkCVIJK6wXhb",
     "GrantType": "client_credentials"
   },
-  "Auth0ManagementApi_Corentin": {
+  "Auth0ManagementApi": {
     "Audience": "https://dev-c6lwemo7.us.auth0.com/api/v2/",
     "Path": "https://dev-c6lwemo7.us.auth0.com/oauth/token",
     "ClientSecret": "aJjviBa_sZay7jd-jy-6rsNVW4-tSLO3Rp8ypWpn6jnaKl3_v7m7OIqPEVwRLvAW",
