--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ SpaceAdventures/SpaceAdventures.API/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
 SpaceAdventures/SpaceAdventures.API/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+SpaceAdventures/SpaceAdventures.MVC/appsettings.json
