--- a/SpaceAdventures/SpaceAdventures.API/SpaceAdventures.API.csproj
+++ b/SpaceAdventures/SpaceAdventures.API/SpaceAdventures.API.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Middlewares\**" />
+    <Content Remove="Middlewares\**" />
+    <EmbeddedResource Remove="Middlewares\**" />
+    <None Remove="Middlewares\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="LogRequestNuget" Version="1.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
@@ -26,10 +33,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\SpaceAdventures.Application.csproj" />
     <ProjectReference Include="..\Infrastructure\SpaceAdventures.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Middlewares\" />
   </ItemGroup>
 
 </Project>
