--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ SpaceAdventures/SpaceAdventures.MVC/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
 SpaceAdventures/SpaceAdventures.API/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+SpaceAdventures/SpaceAdventures.API/appsettings.json
+SpaceAdventures/SpaceAdventures.MVC/appsettings.json
