--- a/SpaceAdventures/SpaceAdventures.API/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.API/appsettings.json
@@ -17,7 +17,7 @@
     "Audience": "https://localhost:7195"
   },
 
-  "Auth0": {
+  "Auth0_Antoine": {
     "Domain": "https://dev-hlpjlsil.eu.auth0.com/",
     "Audience": "https://localhost:7195"
   },
@@ -39,7 +39,7 @@
     "GrantType": "client_credentials"
   },
 
-  "Auth0ManagementApi": {
+  "Auth0ManagementApi_Antoine": {
     "Audience": "https://dev-hlpjlsil.eu.auth0.com/api/v2/",
     "Path": "https://dev-hlpjlsil.eu.auth0.com/oauth/token",
     "ClientSecret": "4My5JXSY6_yKi7IH13vKvF1BclVSBe45F8s7JZQImUDGipVQUcVQZd4cuAuhwt5r",
