Comment Added (CreateUser Backend Service)

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ SpaceAdventures/SpaceAdventures.MVC/appsettings.json
 SpaceAdventures/SpaceAdventures.API/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
 SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+SpaceAdventures/SpaceAdventures.API/appsettings.json
+SpaceAdventures/SpaceAdventures.MVC/appsettings.json
