--- a/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
+++ b/SpaceAdventures/SpaceAdventures.MVC/appsettings.json
@@ -49,7 +49,7 @@
       "GrantType": "client_credentials"
     },
 
-    "Auth0ManagementApi_": {
+    "Auth0ManagementApi": {
       "Audience": "https://dev-c6lwemo7.us.auth0.com/api/v2/",
       "Path": "https://dev-c6lwemo7.us.auth0.com/oauth/token",
       "ClientSecret": "aJjviBa_sZay7jd-jy-6rsNVW4-tSLO3Rp8ypWpn6jnaKl3_v7m7OIqPEVwRLvAW",
